--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ torch==1.8.1+cpu
 torchvision==0.9.1+cpu
 
 #These other packages can be found on PyPi
-streamlit==1.4.0
+streamlit
 boto3==1.20.37
 Pillow==9.0.0
 pandas==1.3.5
